<!--
  ~ /**
  ~  * Created by Rafsan Ahmad on 9/27/21, 5:30 PM
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  */
  -->

<resources>
    <string name="app_name">News App</string>
    <string name="favorites">Favorites</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="today_news">Today\'s News</string>
    <string name="favorite_news">Favorite News</string>
    <string name="details">Details</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="source">SOURCE</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="search_query_too_short">Please enter at least %d characters to search</string>
</resources>