<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_nav_graph"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.rafsan.newsapp.ui.feed.FeedFragment"
        android:label="@string/today_news">
        <action
            android:id="@+id/action_feedFragment_to_DetailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.rafsan.newsapp.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_news">
        <action
            android:id="@+id/action_favoriteFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.rafsan.newsapp.ui.details.DetailsFragment"
        android:label="@string/details">
        <argument
            android:name="news"
            app:argType="com.rafsan.newsapp.data.model.NewsArticle" />
    </fragment>
</navigation>